# mini_telegram

./: Makefile  README.md  TODO  celery_config.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
apps/: middleware.py  tasks.py
apps/models/: __init__.py  database.py  user.py
apps/routers/: __init__.py  messenger.py  users.py  websocket.py
apps/utils/: authentication.py  bot.py
templates/: home.html  room.html
templates/auth/: login.html  register.html
